--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
     <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
-      test
+      <h1>{{ product }}</h1>
+      <p>{{ description }}</p>
     </div>
 
-    <!-- Import Js -->
+    <!-- Import App -->
     <script src="./main.js"></script>
+
+    <!-- Mount App -->
+    <script>
+      const mountApp = app.mount('#app')
+    </script>
   </body>
 </html>
