--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
-            <p>In Stock</p>
-            <p>Out of Stock</p>
+            <p v-if="onSale">PRODUCT ON SALE</p>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+            <p v-else>Out of Stock</p>
           </div>
         </div>
       </div>
